# Lesson_ACE_Framework

./: .env.example  .gitignore  AGENTS.md  README.md  REFACTORING.md  ace_memory.db  ace_memory.db_idx_None.index  ace_memory.faiss  chainlit.md  debug_import.py  implementation_plan_chromadb.md  plan_rag.md  pyproject.toml  reproduce_issue.py  strategic_evolution_plan.md  technical_assessment_rag.md  test_search.py  test_search_detailed.py  test_search_improved.py
src/ace_rm/: ace_framework.py  app.py  chainlit_app.py  config.py  constants.py  graph.py  memory.py  typing.py  utils.py  worker.py
src/ace_rm/agent/: graph.py
src/ace_rm/memory/: core.py  queue.py
src/ace_rm/prompts/: __init__.py  en.py  ja.py
src/ace_rm/utils/: __init__.py  embedding_manager.py  stm_manager.py
src/ace_rm/workers/: background.py
tests/: benchmark_ace.py  benchmark_response_time.py  manual_test_background.py  manual_test_memory_flow.py  repro_table_bug.py  test_background_worker.py  test_graph_build.py  test_graph_logic.py  test_memory.py  test_mfr_diff.py
tests/manual/: check_memory.py  reproduce_issue.py  test_context_usage.py  test_search_detailed.py
wiki/: 00-目次.md  01-概要.md  02-クイックスタート.md  03-アーキテクチャ.md  04-リポジトリ構造.md  05-データモデル.md  06-コアコンポーネント.md  07-APIとプロンプト.md  08-テストと検証.md  09-デプロイメントと最適化.md  10-コントリビューションガイド.md  11-まとめ.md
